--- a/app/src/main/res/drawable/circlebutton.xml
+++ b/app/src/main/res/drawable/circlebutton.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="oval">
-            <solid android:color="@color/teal" />
+            <solid android:color="@color/pink" />
             <size android:width="30dp" android:height="30dp" />
         </shape>
     </item>
